--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "into-stream": "^6.0.0",
     "minimist": "^1.2.5",
     "multistream": "^4.1.0",
-    "pkg-fetch": "3.2.4",
+    "pkg-fetch": "github:AHgpuK/pkg-fetch-last#main",
     "prebuild-install": "6.0.1",
     "progress": "^2.0.3",
     "resolve": "^1.20.0",
