Backed out changeset: 7fb1fb1294e2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,7 @@
     "esModuleInterop": true,
     "incremental": true,
     "downlevelIteration": true,
-    "resolveJsonModule": true,
-    "types": ["node"]
+    "resolveJsonModule": true
   },
   "include": ["lib/**/*", "typings/**/*"]
 }
